# learn-opengl

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: codeql.yml  msvc.yml  windows.yml
glad/include/glad/: glad.h
glad/src/: glad.c
src/: camera.cpp  camera.h  main.cpp  shader.cpp  shader.h  texture.cpp  texture.h
